# archi-scraper

./: .gitignore  AUDIT-v1.5.0.md  CONTRACT-v1.5.0.md  FINAL_VERIFICATION.md  README.md  REVIEW.md  SKILL.md  build_app.py  dcra_master.xml  master_model.json  master_model.xml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: tests.yml
scripts/: ArchiScraperApp.py  archiscraper_core.py  archiscraper_to_markdown.py  generate_capability_map_xml.py  generate_data_governance_xml.py  html_to_archimate_xml.py
tests/: test_archiscraper_core.py  test_archiscraper_to_markdown.py  test_gui_app.py  test_html_to_archimate_xml.py
