[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "archi-scraper"
version = "1.2.0"
description = "ArchiScraper is a Python-based tool that extracts architecture data from published Archi HTML reports and converts them back into standard ArchiMate Open Exchange Format (.xml) files."
authors = [
  { name = "Gonzalo López Gil", email = "gonzalo.lopez.gil@gmail.com" },
]
license = { text = "GPL-3.0-only" }
requires-python = ">=3.10"
dependencies = [
  "requests>=2.28",
  "beautifulsoup4>=4.12",
  "fake-useragent>=2.0",
]

[project.optional-dependencies]
dev = ["pytest"]
gui = [
  "PyQt6>=6.6",
  "PyQt6-WebEngine>=6.6",
  "pillow>=9.5",
]

[project.scripts]
archi-scraper = "scripts.html_to_archimate_xml:main"

[project.urls]
Homepage = "https://github.com/gonzalopezgil/archi-scraper"
Repository = "https://github.com/gonzalopezgil/archi-scraper"
Issues = "https://github.com/gonzalopezgil/archi-scraper/issues"
